shuffled the dataset after augmentation

--- a/ML_Capstone_project.ipynb
+++ b/ML_Capstone_project.ipynb
@@ -861,6 +861,34 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-3WG_ByohAyD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# shuffling the data before downsampling and splitting into train and test\n",
+        "data = data.sample(frac=1).reset_index(drop=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qrhGSkVihVLd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "data.head()\n",
+        "data.to_csv('shuffled_aug_lables.csv')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "cfzjJ0w3bAs8",
