organised and commented some code

--- a/ML_Capstone_Project_part2.ipynb
+++ b/ML_Capstone_Project_part2.ipynb
@@ -164,6 +164,11 @@
       },
       "source": [
         "def plot_classes(df):\n",
+        "  '''\n",
+        "  Takes a dataframe and plots ratio of each class \n",
+        "  in the dataset in addition to non-valid records\n",
+        "  if found.\n",
+        "  '''\n",
         "  forward_class= df.forward[df['forward']==1].count()\n",
         "  right_class=df.right[df['right']==1].count()\n",
         "  left_class=df.left[df['left']==1].count()\n",
@@ -949,7 +954,12 @@
       "source": [
         "batch_pointer= 0\n",
         "base_path='data_classifier_augmented'\n",
+        "\n",
         "def generate_batch(df, batch_size=512):\n",
+        "  '''\n",
+        "  * generate batches from training data to feed to the model.\n",
+        "  * Crops and normalizes images as a part of preprocessing.\n",
+        "  '''\n",
         "    global batch_pointer\n",
         "    train_data=df.index.max()+1\n",
         "    y=np.array(df.drop(['img'],inplace=False,axis=1))\n",
@@ -962,6 +972,8 @@
         "        \n",
         "        X_batch=df.img[batch_start:batch_end]\n",
         "        y_batch = y[batch_start:batch_end]\n",
+        "        #produces images of shape (3,66,200) by cropping the region of interest\n",
+        "        #which is the lane part of the image and then by resizing.\n",
         "        images = np.array([np.int32(imresize(imread('/'.join([base_path, im]))[-150:], size=(66, 200))) /255 for im in X_batch])\n",
         "\n",
         "        \n",
@@ -1198,7 +1210,9 @@
         "colab_type": "text"
       },
       "source": [
-        "# Transfer Learning using VGG16"
+        "# Transfer Learning using VGG16\n",
+        "* Using VGG16 conv layers pretrained on imagnet as a feature extractor\n",
+        "and adding a fc network for classification after the feature extractor."
       ]
     },
     {
@@ -1610,17 +1624,17 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "zT6Kw1zLsrdX",
-        "colab_type": "code",
-        "colab": {}
+        "id": "7j5CmlZOvcyY",
+        "colab_type": "text"
       },
       "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "# Conclusions\n",
+        "* It looks like transfer learning with VGG16 doesn't perform better than my Model Architecture trained from scratch.\n",
+        "* However, the results of both my model or VGG16 outperform the benchmark and looks like a suitable solution for the problem.\n",
+        "* I would prefer to use my model as it has a lower number of total parameters than the custom VGG16 model, which means the inference time of my model is much smaller which is better for real-time inference."
+      ]
     }
   ]
 }
